Extract spark tests and improve pom (#711)